[gd_scene load_steps=7 format=3 uid="uid://jsutwy7p14gi"]

[ext_resource type="Script" path="res://scripts/ui/mission_recap.gd" id="1_recap"]
[ext_resource type="FontFile" uid="uid://xqiy7ijtjsrv" path="res://assets/fonts/VT323-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://icon_fuel" path="res://assets/sprites/ui/icons/icon_fuel.png" id="3_fuel"]
[ext_resource type="Texture2D" uid="uid://icon_scrap" path="res://assets/sprites/ui/icons/icon_scrap.png" id="4_scrap"]
[ext_resource type="Texture2D" uid="uid://icon_enemies" path="res://assets/sprites/ui/icons/icon_enemies.png" id="5_enemies"]
[ext_resource type="Texture2D" uid="uid://icon_turn" path="res://assets/sprites/ui/icons/icon_turn.png" id="6_turn"]

[node name="MissionRecap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_recap")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.01, 0.01, 0.05, 0.9)

[node name="GlowEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -308.0
offset_top = -288.0
offset_right = 308.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.15)

[node name="BorderOuter" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -304.0
offset_top = -284.0
offset_right = 304.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.6)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundGradient" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
color = Color(0.02, 0.04, 0.06, 0.98)

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 12

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="LeftDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.5)

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.2, 1.0, 0.5, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "[ EXTRACTION COMPLETE ]"
horizontal_alignment = 1

[node name="RightDecor" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
custom_minimum_size = Vector2(30, 2)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.5)

[node name="OutcomeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "TEAM SUCCESSFULLY EXTRACTED"
horizontal_alignment = 1

[node name="TopBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.4)

[node name="MissionHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "MISSION HAUL"

[node name="StatsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 8

[node name="FuelRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FuelIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/FuelRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("3_fuel")
expand_mode = 1
stretch_mode = 5

[node name="FuelLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/FuelRow"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "FUEL COLLECTED: +0"

[node name="ScrapRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="ScrapIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/ScrapRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("4_scrap")
expand_mode = 1
stretch_mode = 5

[node name="ScrapLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/ScrapRow"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.7, 0.2, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "SCRAP COLLECTED: +0"

[node name="EnemiesRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="EnemiesIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/EnemiesRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("5_enemies")
expand_mode = 1
stretch_mode = 5

[node name="EnemiesLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/EnemiesRow"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(1.0, 0.4, 0.3, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "HOSTILES ELIMINATED: 0"

[node name="TurnsRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TurnsIcon" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/TurnsRow"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
texture = ExtResource("6_turn")
expand_mode = 1
stretch_mode = 5

[node name="TurnsLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/StatsContainer/TurnsRow"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.5, 0.8, 0.9, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "TURNS SURVIVED: 0"

[node name="ObjectivesBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.3)

[node name="ObjectivesHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "OBJECTIVES"

[node name="ObjectivesContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="MidBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.3)

[node name="CrewHeader" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_color = Color(0.3, 0.5, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "CREW STATUS"

[node name="OfficersContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 4

[node name="BottomBorder" type="ColorRect" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.3)

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 50)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.4, 0.9, 1.0, 1)
theme_override_colors/font_hover_color = Color(0.7, 1.0, 1.0, 1)
theme_override_colors/font_pressed_color = Color(0.2, 0.6, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "[ RETURN TO SHIP ]"

[node name="CornerTL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -280.0
offset_right = -292.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.8)

[node name="CornerTR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 292.0
offset_top = -280.0
offset_right = 300.0
offset_bottom = -272.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.8)

[node name="CornerBL" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = 272.0
offset_right = -292.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.8)

[node name="CornerBR" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 292.0
offset_top = 272.0
offset_right = 300.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.2, 1.0, 0.5, 0.8)
